:lipstick: Fix sophia iframe position on ios safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,10 @@ $content-width: 800px;
 $on-palm: 600px;
 $on-laptop: 800px;
 
+:root {
+  --app-height: 100%;
+}
+
 body {
     background-color: $background-color;
     color: white;
@@ -226,7 +230,9 @@ text-black {
 }
 
 iframe {
-  height: 100%;
+  margin-top: 0; // fix position about navbar in ios safari
+  height: calc(100vh - 64px);
+  max-height: calc(100vh - 64px);
   width: 100%;
   border: none;
 }
